fix: broken layout because of vh unit on mobile browsers

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,9 +1,13 @@
+html {
+  height: 100%;
+}
+
 body {
   display: flex;
   flex-direction: column;
   align-items: stretch;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   overflow: hidden;
 }
 
@@ -11,7 +15,7 @@ body {
 [role=application] {
   display: flex;
   height: inherit;
-  flex: 1 1 100vh;
+  flex: 1 1 100%;
   overflow-y: auto;
 }
 
